<resources>
    <string name="app_name">空气电台</string>
    <string name="accountId">zengfan1190@163.com</string>
    <string name="mobile_no">13938578189</string>
    <string name="login_regist"><a href="">用户注册</a></string>
    <string name="login_regist_user">用户注册</string>
    <string name="login_regist_nick">昵称</string>
    <string name="login_reg_email">邮箱</string>
    <string name="login_reg_emaila">邮箱地址</string>
    <string name="login_reg_confirm">再次输入确认</string>
    <string name="login_reg_passconfirm">密码确认</string>
    <string name="login_reg_tel">填写手机号</string>
    <string name="login_reg_agree">同意空气电台协议</string>
    <string name="login_email_address">账号</string>
    <string name="login_email_address_hint">用户注册邮箱</string>
    <string name="login_changepw_update">修改</string>
    <string name="login_forgetpw_get_chk_code">短信验证</string>
    <string name="login_forgetpw_chk_code">验证码</string>
    <string name="login_forgetpw_chk_code_hint">输入短信验证码</string>
    <string name="login_forgetpw_title">忘记密码</string>
    <string name="login_forgetpw_passwd_hint">至少六位                                                            </string>
    <string name="login_forgetpw_passwd2_hint">新密码</string>
    <string name="login_forgetpw_submit">提   交</string>
    <string name="email">用户邮箱</string>
    <string name="email_form">用户邮箱</string>
    <string name="login_pw">密码</string>
    <string name="login_save_pw">保存密码</string>
    <string name="login">登录</string>
    <string name="login_corp">北京威果智能科技有限公司</string>
    <string name="login_city">郑州市</string>
    <string name="login_country">中国</string>
    <string name="login_loc">高新区金梭路169号</string>
    <string name="login_new_user">新用户</string>
    <string name="login_banquan">版权所有</string>
    <string name="login_remember">记住密码</string>
    <string name="login_tel">手机号</string>
    <string name="login_forget_pw"><a href="">忘记密码</a></string>
    <string name="login_reg_pass_max"><a href="">最长为16位</a></string>
    <string name="login_reg_pass_min"><a href="">最短为6位</a></string>
    <string name="login_forget_code"><a href="">验证码格式错误</a></string>
    <string name="infor_null"><a href="">不能为空</a></string>
    <string name="phone_wrong"><a href="">手机号不合法</a></string>
    <string name="code"><a href="">验证码</a></string>
    <string name="send_code"><a href="">请求验证码</a></string>
    <string name="login_instruction">不了解智能家居？<a href="http://www.hanwei.cn">请点击</a></string>
    <string name="abouttitle">关于</string>
    <string name="about">汉威电子智能家居，可以监控各种传感器的信息</string>
    <string name="version">版本 1.0</string>
    <string name="aboutweb">wap.hanwei.cn</string>
    <string name="contactsus">Copyright©Since 1998 汉威电子</string>
    <string name="moreapp">更多来自汉威的应用</string>
    <string name="help_center">帮助中心</string>
    <string name="commonProblem">常见问题</string>
    <string name="onlineManual">在线说明书</string>
    <string name="onlineVideo">在线视频</string>
    <string name="feedback">意见反馈</string>
    <string name="account_info">我的信息</string>
    <string name="setting_ques">调查问卷</string>
    <string name="account_setting">账号管理</string>
    <string name="push_setting">系统通知</string>
    <string name="push_alerm">报警推送</string>
    <string name="push_warn">预警推送</string>
    <string name="push_ordinary">日常推送</string>
    <string name="device_setting">配置向导</string>
    <string name="ui_discuss_title">我要吐槽</string>
    <string name="ui_discuss_detail_title">吐槽版面</string>
    <string name="account_nickname">昵称</string>
    <string name="account_name">账号</string>
    <string name="account"><font color="#ff0000">*</font>账号</string>
    <string name="account_pass"><font color="#ff0000">*</font>密码</string>
    <string name="account_passa"><font color="#ff0000">*</font>密码确认</string>
    <string name="account_hint">手机号</string>
    <string name="mobile">手机号</string>
    <string name="mobile_hint">报警短信通知</string>
    <string name="chg_pw">修改密码</string>
    <string name="pw">现密码</string>
    <string name="pw_hint">登录用户密码</string>
    <string name="pw_new">新密码</string>
    <string name="pw_new_hint">至少六位</string>
    <string name="pw_new_repeat">重复密码</string>
    <string name="pw_new_repeat_hint">重复新密码</string>
    <string name="scene_add_name_tip">在这里您可以设置场景的名称</string>
    <string name="scene_add_type_tip">请选择场景的类型</string>
    <string name="scene_add_res_success">添加场景成功</string>
    <string name="scene_add_res_fail">添加场景失败</string>
    <string name="scene_update_res_success">修改场景成功</string>
    <string name="scene_update_res_fail">修改场景失败</string>
    <string name="scene_delete_res_success">删除场景成功</string>
    <string name="scene_delete_res_fail">删除场景失败</string>
    <string name="scene_delete_server_err">网络连接异常,服务器没有返回有效数据</string>
    <string name="home_scene_sensor_btn_setting">设备选项</string>
    <string name="home_scene_sensor_btn_detail">进入设备</string>
    <string name="home_scene_sensor_id">设备ID</string>
    <string name="home_scene_delete">删除</string>
    <string name="home_title_list">场景</string>
    <string name="home_title_detail">设备</string>
    <string name="home_all_nation_rank">全国用户排名</string>
    <string name="home_last_7_days">过去七天</string>
    <string name="home_sensor_realtime">室内指数</string>
    <string name="home_sensor_type">历史数据</string>
    <string name="home_sensor_solution">健康小贴士</string>
    <string name="home_score">85分</string>
    <string name="home_air_index">当前室内气体指数</string>
    <string name="test_percentage">13%</string>
    <string name="test_value">2.4</string>
    <string name="test_value2">4000</string>
    <string name="test_temperature">27°C</string>
    <string name="feel_temperature">感觉温度</string>
    <string name="temperature_info">6°C feels like 4°C</string>
    <string name="home_temperature">温度</string>
    <string name="home_humidity">湿度</string>
    <string name="home_voc">VOC</string>
    <string name="home_co">一氧化碳</string>
    <string name="home_co2">CO₂</string>
    <string name="home_ch4">天然气</string>
    <string name="home_pm25">PM2.5</string>
    <string name="home_history_tab_last24hours">过去24小时</string>
    <string name="home_history_tab_last7Days">过去7天</string>
    <string name="home_history_tab_last30Days">过去30天</string>
    <string name="home_hint">今天家里也很热，该装空调了。</string>
    <string name="home_equipment_status">设备运行正常</string>
    <string name="home_history">历史记录</string>
    <string name="home_good">适宜</string>
    <string name="home_drying">干燥</string>
    <string name="home_healthy">健康</string>
    <string name="home_com_status">通讯状态</string>
    <string name="home_bug_status">故障显示</string>
    <string name="home_web_statusy">网络连接</string>
    <string name="test_weather">小雨</string>
    <string name="test_pa">1024hpa</string>
    <string name="test_water">10mm</string>
    <string name="water_info">小雨 0.00 mm</string>
    <string name="windspeed">风速</string>
    <string name="test_windspeed">11km/h</string>
    <string name="test_NNW">NNW</string>
    <string name="city_info">郑州市,CN</string>
    <string name="test_solution">刷新中</string>
    <string name="test_name">曾凡</string>
    <string name="test_addr">火星</string>
    <string name="profile">用户信息</string>
    <string name="profile_name">住址</string>
    <string name="profile_addr">业主名称</string>
    <string name="profile_phone">固话</string>
    <string name="profile_tel">联系方式</string>
    <string name="test_nick">曾凡</string>
    <string name="devlist">团队成员</string>
    <string name="developer_name1">士大夫的愤怒/n项目鲸鲤、APP程序猿</string>
    <string name="developer_name2">王贺喜/n后端程序猿</string>
    <string name="developer_name3">闫威/nAPP程序猿</string>
    <string name="developer_name4">李静/nAPP程序猿</string>
    <string name="developer_name5">李羽皓/n后端程序猿</string>
    <string name="developer_name6">李留品/n测试猿</string>
    <string name="developer_name7">苌帅/n质量管控</string>
    <string name="developer_name8">赵帅/n艺术总监</string>
    <string name="sensor_test_name">烟雾传感器</string>
    <string name="sensor">手机绑定设备</string>
    <string name="sensor_id">设备编号</string>
    <string name="sensor_name">设备名称</string>
    <string name="sensor_edit">设备列表</string>
    <string name="sensor_reg_next">下一步对设备设备进行配网</string>
    <string name="sensor_wifi_return">上一步绑定手机和设备设备</string>
    <string name="sensor_onekey">一键配置</string>
    <string name="sensor_2dbar">设备编号</string>
    <string name="sensor_2dbar_not_null">二维码不能为空</string>
    <string name="sensor_2dbar_form">二维码格式不正确</string>
    <string name="sensor_2dbar_hint">扫描或输入设备二维码</string>
    <string name="sensor_2dbar_scan">扫描</string>
    <string name="sensor_wifi">SSID</string>
    <string name="sensor_wifi_not_null">Wi-Fi SSID不能为空</string>
    <string name="sensor_wifi_hint">当前连接Wi-Fi的SSID</string>
    <string name="sensor_wifi_name">Wi-Fi名称</string>
    <string name="sensor_wifi_guide">1) 点击<b>[扫一扫]</b>扫描设备背部或包装箱上的<b>[设备ID]</b>\n2) 点击<b>[绑定设备]</b>，成功后点击<b>[下一步]</b></string>
    <string name="sensor_wifi_name_default">如果为空请连接手机到Wi-Fi</string>
    <string name="sensor_wifi_pw">Wi-Fi密码</string>
    <string name="sensor_wifi_pw_hint">请输入Wi-Fi密码</string>
    <string name="sensor_wifi_regist">设备配网</string>
    <string name="sensor_submit">绑定设备</string>
    <string name="sensor_scan">扫一扫</string>
    <string name="sensor_return">上一步</string>
    <string name="sensor_next">下一步</string>
    <string name="sensor_finish">完成</string>
    <string name="sensor_succ">用户绑定设备成功</string>
    <string name="sensor_fail">用户绑定设备失败</string>
    <string name="sensor_true">开关</string>
    <string name="sensor_online_status">在线状态</string>
    <string name="sensor_online_status_on">在线</string>
    <string name="sensor_online_status_off">不在线</string>
    <string name="sensor_delete">删除</string>
    <string name="sensor_reg_sccuess">注册成功</string>
    <string name="sensor_delete_sccuess">删除成功</string>
    <string name="sensor_delete_fail">删除失败</string>
    <string name="sensor_changing">修改中...</string>
    <string name="open_wifi_hint">请打开wifi</string>
    <string name="sensor_change">修改设备名称</string>
    <string name="pw_submit">更换密码</string>
    <string name="sensor_change_sccuess">修改名称成功</string>
    <string name="sensor_change_fail">修改名称失败</string>
    <string name="hint_pm25_high">柯南：pm2.5可以直接伤害到孩子的肺，通过呼吸后的供氧，传到全身，影响孩子成长发育，所以我三十多岁了还在读小学。</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="network_not_connected">处理过程发生错误，可能尚未开启网络!</string>
    <string name="network_not_connected_view_local">网络连接失败,为您显示本地缓存数据，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="app_error">应用程序错误</string>
    <string name="cam_init_date">加载中</string>
    <string name="cam_init_time">加载中</string>
    <string name="cam_init_state">加载省</string>
    <string name="cam_init_city">城市</string>
    <string name="cam_init_loc">加载地址</string>
    <string name="cam_init_temp">加载</string>
    <string name="cam_init_hum">加载</string>
    <string name="cam_init_co2">加载</string>
    <string name="cam_init_voc">加载</string>
    <string name="cam_init_pm25">加载</string>
    <string name="et_password_hint">密码</string>
    <string name="tv_tips_password">密码由6-16位数字、字母或符号组成</string>
    <string name="tv_tips_name">建议填写你的真实姓名,让你的朋友更容易人出你,此昵称以后可以随时修改</string>
    <string name="et_name_hint">昵称</string>
    <string name="register_complete">完成</string>
</resources>