<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="camTalkListener" >
<!-- 户外和设备名bgn -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/camSensorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/camWeatherPM25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/camWeatherTem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/camSysTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!-- 户外和设备名end -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/full_transparent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/camDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cam_init_date"
                        android:textColor="@color/cam_font_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textColor="@color/cam_font_color" />

                    <TextView
                        android:id="@+id/camTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cam_init_time"
                        android:textColor="@color/cam_font_color" />
                </LinearLayout>

                <TextView
                    android:id="@+id/camCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cam_border"
                    android:text="@string/cam_init_city"
                    android:textColor="@color/cam_font_color"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/camState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_state"
                    android:textColor="@color/cam_font_color"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/camLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_loc"
                    android:textColor="@color/cam_font_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_temperature"
                    android:textColor="@color/cam_font_color" />

                <TextView
                    android:id="@+id/camTmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_temp"
                    android:textColor="@color/cam_font_color"
                    android:textSize="@dimen/cam_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_humidity"
                    android:textColor="@color/cam_font_color" />

                <TextView
                    android:id="@+id/camHum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_hum"
                    android:textColor="@color/cam_font_color"
                    android:textSize="@dimen/cam_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_co2"
                    android:textColor="@color/cam_font_color" />

                <TextView
                    android:id="@+id/camCo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_co2"
                    android:textColor="@color/cam_font_color"
                    android:textSize="@dimen/cam_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_pm25"
                    android:textColor="@color/cam_font_color" />

                <TextView
                    android:id="@+id/camPm25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_pm25"
                    android:textColor="@color/cam_font_color"
                    android:textSize="@dimen/cam_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_voc"
                    android:textColor="@color/cam_font_color" />

                <TextView
                    android:id="@+id/camVoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cam_init_voc"
                    android:textColor="@color/cam_font_color"
                    android:textSize="@dimen/cam_font_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>